--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
     
     <h3>프로젝트 주제 소개</h3>
-    <p>~
+    <p>~add
     </p>
     <ul class="nav flex-column">
         <li class="pb-3"><a href=main/main.html>프로젝트 페이지 바로가기 링크</a><span class="badge bg-primary">진행중</span></li>
