--- a/main/main.html
+++ b/main/main.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-expand-sm">
   <ul class="navbar-nav mx-auto">
     <li class="nav-item">
-      <a class="nav-link" href="main.html">Home</a>
+      <a class="nav-link" href="../main/main.html">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="../image_test/image_test.html">Image Test</a>
@@ -58,9 +58,8 @@
 </div>
 
 <div class="footer">
-  <p class="text-center">숙명여자대학교 청파로 어딘가..<br>
+  <p class="text-center">04310 서울특별시 용산구 청파로47길 100(청파동2가) 숙명여자대학교.<br>
     010-0404-0404 comssasong@sookmyung.ac.kr<br>
-    Copyright(C)Comssasong. All right reserved.</p>
 </div>
 
 </body>
