--- a/image_test/Image_test.html
+++ b/image_test/Image_test.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="online.css">
+  <link rel="stylesheet" href="Image_test.css">
   <link rel="stylesheet" href="../main/main_style.css">
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Do+Hyeon&family=Gamja+Flower&family=Orbit&display=swap" rel="stylesheet">
 </head>
@@ -44,9 +44,8 @@
 <div id="result"></div>
 
 <div class="footer">
-  <p class="text-center">웃음마을 행복구 123번지 농담곰의 미소집 3층<br>
-    010-0069-9290 nongdam@dangom.com<br>
-    Copyright(C)Damgom. All right reserved.</p>
+  <p class="text-center">04310 서울특별시 용산구 청파로47길 100(청파동2가) 숙명여자대학교.<br>
+    010-0404-0404 comssasong@sookmyung.ac.kr<br>
 </div>
 
 </body>
