--- a/self_check/self_check.html
+++ b/self_check/self_check.html
@@ -26,7 +26,7 @@
       <a class="nav-link" href="../main/main.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../Image_test/Image_test.html">Image Test</a>
+      <a class="nav-link" href="../image_test/Image_test.html">Image Test</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="self_check.html">Self Check</a>
