--- a/main/main.html
+++ b/main/main.html
@@ -23,7 +23,7 @@
       <a class="nav-link" href="../main/main.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../image_test/image_test.html">Image Test</a>
+      <a class="nav-link" href="../image_test/Image_test.html">Image Test</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="../self_check/self_check.html">Self Check</a>
