--- a/main/main.html
+++ b/main/main.html
@@ -20,22 +20,22 @@
 <nav class="navbar navbar-expand-sm">
   <ul class="navbar-nav mx-auto">
     <li class="nav-item">
-      <a class="nav-link" href="../main/main.html">Home</a>
+      <a class="nav-link" href="main.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../image_test/Image_test.html">Image Test</a>
+      <a class="nav-link" href="../image_test/image_test.html">Image Test</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="../webcam_test/webcam_test.html">Webcam Test</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="../self_check/self_check.html">Self Check</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="../mypage/mypage.html">My Page</a>
     </li>
   </ul>
   <a class="btn" href="../login/login.html">Login</a>
 </nav>
 
-<div class="container" style="margin-top:30px">
+<div class="container" style="margin-top:30px; flex: 1;">
   <div class="row">
     <div class="col text-center">
       <h2 style="margin-bottom: 20px;">자폐 스펙트럼</h2>
@@ -59,7 +59,7 @@
 
 <div class="footer">
   <p class="text-center">04310 서울특별시 용산구 청파로47길 100(청파동2가) 숙명여자대학교.<br>
-    010-0404-0404 comssasong@sookmyung.ac.kr<br>
+    010-0404-0404 comssasong@sookmyung.ac.kr<br></p>
 </div>
 
 </body>
