--- a/self_check/self_check.html
+++ b/self_check/self_check.html
@@ -26,17 +26,18 @@
       <a class="nav-link" href="../main/main.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../image_test/Image_test.html">Image Test</a>
+      <a class="nav-link" href="../image_test/image_test.html">Image Test</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="../webcam_test/webcam_test.html">Webcam Test</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="self_check.html">Self Check</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="../mypage/mypage.html">My Page</a>
-    </li>
   </ul>
   <a class="btn" href="../login/login.html">Login</a>
 </nav>
+
 
 <div class="container mt-5">
   <form id="self-check-form" class="d-flex flex-column align-items-center">
