--- a/login/login_complete.html
+++ b/login/login_complete.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <title>Order Complete - NONGDAMGOM WORLD</title>
+  <title>Login Complete - NONGDAMGOM WORLD</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../cookie.js"></script>
   <link rel="stylesheet" href="../main/main_style.css">
-  <link rel="stylesheet" href="order_page.css">
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Do+Hyeon&family=Gamja+Flower&family=Orbit&display=swap" rel="stylesheet">
   <style>
-    .order-complete-container {
+    .register-complete-container {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -21,23 +21,23 @@
       text-align: center;
     }
 
-    .order-complete-box {
+    .register-complete-box {
       border: 2px solid #000;
       border-radius: 10px;
-      padding: 20px;
-      width: 500px;
+      padding: 30px;
+      width: 600px;
+      height: 600px;
     }
 
-    .order-complete-box img {
-      max-width: 100%;
-      height: auto;
+    .register-complete-box img {
+        width: 420px;
     }
   </style>
 </head>
 <body>
 
 <div class="header">
-  <h1 class="custom-font">NONGDAMGOM WORLD</h1>
+  <h1 class="custom-font">AUTISM SPECTRUM DIAGNOSIS</h1>
 </div>
 
 <nav class="navbar navbar-expand-sm">
@@ -46,30 +46,29 @@
       <a class="nav-link" href="../main/main.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="online.html">Online Store</a>
+      <a class="nav-link" href="../image_test/image_test.html">Image Test</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../offline/offline.html">Offline Store</a>
+      <a class="nav-link" href="../webcam_test/webcam_test.html">Webcam Test</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../mypage/mypage.html">My Page</a>
+      <a class="nav-link" href="../self_check/self_check.html">Self Check</a>
     </li>
   </ul>
-  <a class="btn" href="../login/login.html">Login</a>
+  <a class="btn" href="login.html">Login</a>
 </nav>
 
-<div class="order-complete-container">
-  <div class="order-complete-box">
-    <h2>주문완료!</h2>
-    <p>저희 제품을 믿고 구매해주셔서 감사합니다</p>
-    <img src="꽃을 든 곰.jpg" alt="주문완료 이미지">
+<div class="register-complete-container">
+  <div class="register-complete-box">
+    <h2>로그인 완료!</h2>
+    <p>반갑습니다.</p>
+    <img src="행운.jfif" alt="회원가입 완료 이미지">
   </div>
 </div>
 
 <div class="footer">
-  <p class="text-center">웃음마을 행복구 123번지 농담곰의 미소집 3층<br>
-    010-0069-9290 nongdam@dangom.com<br>
-    Copyright(C)Damgom. All right reserved.</p>
+  <p class="text-center">04310 서울특별시 용산구 청파로47길 100(청파동2가) 숙명여자대학교.<br>
+    010-0404-0404 comssasong@sookmyung.ac.kr<br>
 </div>
 
 </body>
