--- a/image_test/Image_test.html
+++ b/image_test/Image_test.html
@@ -40,6 +40,7 @@
 </nav>
 
 <h2 class="text-center">이미지 테스트</h2>
+<div class="instructions">이미지로 자폐 가능성을 테스트하려면 이미지를 삽입하십시오.</div>
 <div class="file-upload">
   <div class="image-upload-wrap">
     <input
