--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>NONGDAMGOM WORLD PROJECT</title>
+    <title>AUTISM SPECTRUM DIAGNOSIS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -9,14 +9,15 @@
 </head>
 <body>
     <div class="container mt-3">
-    <h1>AUTISM SPECTRUM DIAGNOSIS<br/> 컴싸송</h1>
+    <h1>AUTISM SPECTRUM DIAGNOSIS<br/> 팀원: 박성현, 윤나린, 윤서빈, 윤지원</h1>
+    <h3> </h3>
     <hr>
     
     <h3>프로젝트 주제 소개</h3>
-    <p>~add
+    <p>Teaching Machine 을 활용하여 자폐 스펙트럼 장애(ASD)의 조기 발견과 이해를 돕기 위한 종합 도구를 제공하고자 합니다. 이 프로젝트는 "아동'을 대상으로 합니다. 조기 진단의 중요성을 인식하여 ASD로 영향을 받는 사람들의 삶의 질을 향상시키는 것을 목표로 합니다.
     </p>
     <ul class="nav flex-column">
-        <li class="pb-3"><a href=main/main.html>프로젝트 페이지 바로가기 링크</a><span class="badge bg-primary">진행중</span></li>
+        <li class="pb-3"><a href=main/main.html>프로젝트 페이지 바로가기 링크</a><span class="badge bg-primary">진행완료</span></li>
     </ul>
     </div>
 </body>
